src/objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Release_Date__c</fullName>
        <label>Actual Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsyncResultId__c</fullName>
        <label>Async Result Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Describe_Error__c</fullName>
        <label>Code Scan Describe Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Status__c</fullName>
        <label>Code Scan Status</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Violation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Created_On_Heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created On Heroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_on_Heroku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete on Heroku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Post_Deployment_Steps__c</fullName>
        <label>Manual Post-Deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Manual_Pre_Deployment_Steps__c</fullName>
        <label>Manual Pre-Deployment Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Scan_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scan Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Connection__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Connection__c.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Connection__c</referenceTo>
        <relationshipLabel>Releases (Target)</relationshipLabel>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Validation_Describe_Error__c</fullName>
        <label>Validation Describe Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Succeeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Status__c</columns>
        <columns>Source__c</columns>
        <columns>Target__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>